--- a/bower.json
+++ b/bower.json
@@ -27,7 +27,8 @@
   ],
   "dependencies": {
     "angular": "~1.5.0",
-    "lodash": "^4.0.0"
+    "lodash": "^4.0.0",
+    "zerv-ng-sync": "z-open/zerv-ng-sync#^1.1.12"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.0"
