--- a/package.json
+++ b/package.json
@@ -6,37 +6,25 @@
   "repository": {
     "url": ""
   },
-  "version": "0.0.2",
+  "version": "0.0.3",
   "dependencies": {
     "angular": "~1.5.8",
     "lodash": "4.17.15",
     "zerv-ng-sync": "z-open/zerv-ng-sync#1.2.9"
   },
   "devDependencies": {
-    "angular-mocks": "~1.5.0",
-    "babel-preset-env": "^1.6.0",
-    "body-parser": "~1.13.3",
-    "eslint": "^4.3.0",
-    "eslint-config-google": "^0.9.1",
-    "git-describe": "^2.0.1",
-    "gulp": "^3.9.0",
-    "gulp-babel": "^7.0.0",
-    "gulp-bump": "^1.0.0",
-    "gulp-clean": "^0.3.1",
+    "@babel/core": "^7.7.7",
+    "@babel/preset-env": "^7.7.7",
+    "babel-preset-env": "^1.7.0",
+    "eslint": "^6.8.0",
+    "eslint-config-google": "^0.14.0",
+    "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
+    "gulp-clean": "^0.4.0",
     "gulp-concat": "^2.6.0",
-    "gulp-iife": "^0.3.0",
-    "gulp-ng-annotate": "^1.1.0",
-    "gulp-watch": "^4.3.5",
-    "jasmine-core": "^2.4.1",
-    "karma": "^0.13.19",
-    "karma-babel-preprocessor": "^6.0.1",
-    "karma-jasmine": "^0.3.6",
-    "karma-jshint": "^0.1.0",
-    "karma-phantomjs-launcher": "^0.2.3",
-    "karma-wrap-preprocessor": "^0.1.0",
-    "phantomjs": "^1.9.19",
-    "phantomjs-polyfill": "0.0.2",
-    "zerv-security": "z-open/zerv-sync#1.1.1"
+    "gulp-iife": "^0.4.0",
+    "gulp-ng-annotate": "^2.1.0",
+    "gulp-watch": "^5.0.1"
   },
   "scripts": {
     "test": "./node_modules/karma/bin/karma start"
