--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jasmine-core": "3.7.1",
     "karma": "6.3.2",
     "karma-chrome-launcher": "3.1.0",
+    "karma-coverage": "2.0.3",
     "karma-jasmine": "4.0.1",
     "y18n": "3.2.2"
   },
